--- a/playbook/templates/nginx.j2
+++ b/playbook/templates/nginx.j2
@@ -1,12 +1,12 @@
 user  www-data;
-worker_processes  {{ worker_processes }};
+worker_processes  auto;
 worker_priority     -1;
 
 error_log  /var/log/nginx/error.log info;
 pid        /var/run/nginx.pid;
 
 events {
-    worker_connections  {{ worker_connections }};
+    worker_connections  2048;
 }
 
 http {
@@ -34,7 +34,7 @@ http {
     gzip_disable        "msie6";
 
     types_hash_max_size 2048;
-    client_max_body_size {{ client_max_body_size }};
+    client_max_body_size 512M;
     proxy_buffer_size   64k;
     proxy_buffers   4 64k;
     proxy_busy_buffers_size   64k;
